# budgeting

./: Cargo.toml  README.md  local.db  start_db.sh
migrations/: 20231119001201_setup.sql  20231130142751_transaction_categories.sql
src/: accounts.rs  app.rs  banks.rs  lib.rs  main.rs  transactions.rs
src/app/: mod.rs
templates/: base.html  index.html  login.html  register.html  transactions.html
