[package]
name = "budgeting"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Charlie Pecora <charlie.pecora@gmail..com>"
]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.8", features = ["derive", "env"] }
csv = "1.3.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde", "v7"] }

[dev-dependencies]
rstest = "0.18.2"

