[package]
name = "budgeting"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Charlie Pecora <charlie.pecora@gmail..com>"
]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.8", features = ["derive", "env"] }
csv = "1.3.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde", "v7"] }
tower-http = { version = "0.5.0", features = ["fs", "tracing", "trace"] }

[dev-dependencies]
rstest = "0.18.2"

